--- a/src/jade/c3-counter.jade
+++ b/src/jade/c3-counter.jade
@@ -18,11 +18,11 @@ html
         h3 小标题1
         h2 中标题2
         h3 小标题12
-        h3 小标题121221
+        h3 小标题
         h1 大标题
         h2 中标题
         h3 小标题
         h3 小标题
         h2 中标题
         h3 小标题
-        h3 小标题abc
+        h3 小标题
