--- a/src/jade/c3-column-layout.jade
+++ b/src/jade/c3-column-layout.jade
@@ -5,14 +5,24 @@ html
         meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
         style.
             html{
-                font-size:10px;
+                font-size:62.5%;
             }
             div#div1{
+                font-size:12px;
+                font-size: 1.2rem;
                 width:50%;
                 column-count: 3;
+                column-gap:40px;
+                column-gap:4rem;
+                column-rule:solid red 1px;
                 -moz-column-count: 3;
+                -moz-column-gap:40px;
+                -moz-column-gap:4rem;
+                -moz-column-rule:solid red 1px;
                 -webkit-column-count: 3;
-                font-size: 1.2rem;
+                -webkit-column-gap:40px;
+                -webkit-column-gap:4rem;
+                -webkit-column-rule:solid red 1px;
                 padding: 20px;
 
             }
@@ -20,6 +30,7 @@ html
                 width:240px;
             }
             div#div2{
+                font-size:14px;
                 font-size:1.4rem;
                 padding:10px;
                 width:100%;
