--- a/src/jade/c3-column-layout.jade
+++ b/src/jade/c3-column-layout.jade
@@ -7,7 +7,7 @@ html
             html{
                 font-size:62.5%;
             }
-            div#div1{
+            #div1{
                 font-size:12px;
                 font-size: 1.2rem;
                 width:50%;
@@ -26,10 +26,10 @@ html
                 padding: 20px;
 
             }
-            div#div1 > img{
+            #div1 > img{
                 width:240px;
             }
-            div#div2{
+            #div2{
                 font-size:14px;
                 font-size:1.4rem;
                 padding:10px;
@@ -38,13 +38,13 @@ html
                 background-color: orange;
             }
     body
-        div#div1
+        #div1
             img(src="../img/webpack.jpg")
             p webpack是近期最火的一款模块加载器兼打包工具，它能把各种资源，例如JS（含JSX）、coffee、样式（含less/sass）、图片等都作为模块来使用和处理。webpack 的优势
             | 1. webpack 是以 commonJS 的形式来书写脚本滴，但对 AMD/CMD 的支持也很全面，方便旧项目进行代码迁移。
             | 2. 能被模块化的不仅仅是 JS 了。
             | 3. 开发便捷，能替代部分 grunt/gulp 的工作，比如打包、压缩混淆、图片转base64等。
             | 4. 扩展性强，插件机制完善，特别是支持 React 热插拔（见 react-hot-loader ）的功能让人眼前一亮。
-        div#div2
+        #div2
             p 建议去扫 Webpack 的文档, 还有很多功能没涉及到..
             | http://webpack.github.io/docs/
